No need to pass Java 9 modularisation flags as the dependencies needed for record-and-upload app is bundled into it