@@ -61,7 +61,7 @@ set JAVA_HOME=%JAVA_HOME:"=%
 @rem       %%~sI       -  expanded path contains short names only
 @rem                     (see description at https://stackoverflow.com/questions/1333589/how-do-i-transform-the-working-directory-into-a-8-3-short-file-name-using-batch?answertab=active#tab-top)
 @rem
-@rem %%..1 or %%..I in the above example, refers to the input parameter (whole string) to 'for'
+@rem %%..1 or %%..I in the above example                                                                                                                                                                                                                                                                                                                                                                , refers to the input parameter (whole string) to 'for'
 @rem Note: in a batch script we need to use %% instead of just % as per the docs.
 
 for %%f in ("%JAVA_HOME%") do set JAVA_HOME=%%~sf
@@ -177,17 +177,10 @@ set JAVA_VERSION_11=11
 
 if %JAVA_VERSION_INT_VALUE% lss %JAVA_VERSION_9% (
    echo "--- Pre-Java 9 detected ---"
-   echo "Using DEFAULT_JVM_OPTS variable with value '%DEFAULT_JVM_OPTS%'"
 ) else (
    echo "--- Java 9 or higher detected (version %JAVA_VERSION_INT_VALUE%) ---"
-   if %JAVA_VERSION_INT_VALUE% lss %JAVA_VERSION_11% (
-       set DEFAULT_JVM_OPTS=--illegal-access=warn --add-modules=java.xml.bind,java.activation %DEFAULT_JVM_OPTS%
-       echo "Adding JVM args to the DEFAULT_JVM_OPTS variable, new value set to '%DEFAULT_JVM_OPTS%'"
-   ) else (
-      echo "Using DEFAULT_JVM_OPTS variable with value '%DEFAULT_JVM_OPTS%'"
-      echo "Not using kill-switch or modules flags starting from this version of Java"
-   )
 )
+echo "Using DEFAULT_JVM_OPTS variable with value '%DEFAULT_JVM_OPTS%'"
 echo "--------------------------------------------------------------------------------------------------------------"
 
 @echo on
